--- a/pom.xml
+++ b/pom.xml
@@ -61,7 +61,7 @@
 		<dependency>
 			<groupId>com.lolay.android</groupId>
 			<artifactId>lolay-investigo</artifactId>
-			<version>1</version>
+			<version>2-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>com.lolay.android</groupId>
