--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 	<artifactId>lolay-kat</artifactId>
 	<packaging>jar</packaging>
 	<name>Lolay Mobile Foundation Library</name>
-	<version>2</version>
+	<version>3-SNAPSHOT</version>
 	<scm>
 		<connection>scm:git:git://github.com/lolay/kat-android.git</connection>
 		<developerConnection>scm:git:git@github.com:lolay/kat-android.git</developerConnection>
