Added lolay base fragment activity

--- a/build.gradle
+++ b/build.gradle
@@ -25,6 +25,7 @@ sourceSets {
 
 dependencies {
 	provided 'com.google.android:android:2.2.1'
+	provided 'com.android.support:support-v4:18.0.0'
 	compile 'commons-lang:commons-lang:2.6'
 	provided 'org.codehaus.jackson:jackson-core-asl:1.8.5'
 	compile project(':LolayLogJam')
