Added aar support. This library will no longer be used as a submodule… … but it will be an Android Library (aar).

--- a/build.gradle
+++ b/build.gradle
@@ -1,37 +1,16 @@
+// Top-level build file where you can add configuration options common to all sub-projects/modules.
+
 buildscript {
     repositories {
         mavenCentral()
     }
+    dependencies {
+        classpath 'com.android.tools.build:gradle:0.9.+'
+    }
 }
 
-apply plugin: 'java'
-sourceCompatibility = 1.6
-targetCompatibility = 1.6
-
-repositories {
-    mavenCentral()
-	maven {
-		url "http://maven.lolay.com"
-	}
-}
-
-configurations {
-	provided
-}
-
-sourceSets {
-	main.compileClasspath += configurations.provided
-	test.compileClasspath += configurations.provided
-	test.runtimeClasspath += configurations.provided
-}
-
-dependencies {
-	provided 'com.google.android:android:2.2.1'
-	compile 'com.android.support:support-v4:18.0.0'
-	compile 'commons-lang:commons-lang:2.6'
-	provided 'org.codehaus.jackson:jackson-core-asl:1.8.5'
-	compile project(':LolayLogJam')
-	compile project(':LolayInvestigo')
-	compile project(':LolayErred')
-	compile project(':LolayStrands')
+allprojects {
+    repositories {
+        mavenCentral()
+    }
 }
